[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qset-demo"
version = "0.1.0"
description = "Demo: compile Qiskit circuits against multiple backends in CI and track results in MLflow"
requires-python = ">=3.10"
dependencies = [
    "qiskit>=1.2",
    "qiskit-ibm-runtime>=0.30",
    "mlflow>=2.16",
]

[project.scripts]
qset-compile = "qset_demo.compile:main"

[tool.setuptools.packages.find]
where = ["src"]
